# CMake-generator

./: CMakeLists.txt  README.md
cmake/: generate_project.cmake  layer_functions.cmake  options.cmake  vars.cmake  vars_functions.cmake
template/00_base/: CHANGELOG  CMakeLists.txt  LICENSE  LICENSE.rtf
template/00_base/cmake/: compile.cmake  handle.cmake  version.cmake
template/00_base/src/: CMakeLists.txt
template/01_cxx_base/cmake/: compile.cmake
template/02_docs/cmake/: documentation.cmake
template/02_docs/docs/: Doxyfile.man.in
template/05_static-lib/cmake/: compile.cmake
template/05_static-lib/src/: CMakeLists.txt
template/10_shared_lib/cmake/: compilte.cmake
template/10_shared_lib/src/: CMakeLists.txt
template/15_app_cxx/cmake/: compile.cmake
tests/template/full_test/app/: main.cpp
tests/template/full_test/include/: testproject.h
tests/template/full_test/src/: testproject.c
