set(@OPTION_PROJECT_PREFIX_UPPER_CASE@_TARGET_STATIC_LIB
    @OPTION_PROJECT_PREFIX_UNDER_CASE@_target_static_lib)
add_library(${@OPTION_PROJECT_PREFIX_UPPER_CASE@_TARGET_STATIC_LIB} STATIC
    ${@OPTION_PROJECT_PREFIX_UPPER_CASE@_PUBLIC_INCLUDE}
    ${@OPTION_PROJECT_PREFIX_UNDER_CASE@_SOURCES}
    ${@OPTION_PROJECT_PREFIX_UNDER_CASE@_HEADERS})

target_link_libraries(${@OPTION_PROJECT_PREFIX_UPPER_CASE@_TARGET_STATIC_LIB} PRIVATE
    ${@OPTION_PROJECT_PREFIX_UPPER_CASE@_COMPILE_OPTIONS})

set(@OPTION_PROJECT_PREFIX_UPPER_CASE@_NAME_STATIC_LIB
    ${PROJECT_NAME})
set_target_properties(${@OPTION_PROJECT_PREFIX_UPPER_CASE@_TARGET_STATIC_LIB} PROPERTIES 
	OUTPUT_NAME 
		${@OPTION_PROJECT_PREFIX_UPPER_CASE@_NAME_STATIC_LIB}
	VERSION 
		${PROJECT_VERSION}
	ARCHIVE_OUTPUT_DIRECTORY
		${CMAKE_BINARY_DIR}/out/static)

if (UNIX)
    add_custom_command(TARGET ${@OPTION_PROJECT_PREFIX_UPPER_CASE@_TARGET_STATIC_LIB} 
        POST_BUILD
        COMMAND strip --strip-unneeded "$<TARGET_FILE:${@OPTION_PROJECT_PREFIX_UPPER_CASE@_TARGET_STATIC_LIB}>")
endif ()